--- a/.github/workflows/print-message.yml
+++ b/.github/workflows/print-message.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+
+      - name: Install Dependencies
+        run: npm install
         
       - name: Run Print Message Action
         uses: ./
